--- a/mood_citations.html
+++ b/mood_citations.html
@@ -1,134 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The DNA Way Introduction</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        .text-base {
-            font-size: 16px;
-        }
-        .font-bold {
-            font-weight: bold;
-        }
-        .italic {
-            font-style: italic;
-        }
-        .my-2 {
-            margin: 10px 0;
-        }
-        .my-0\.5 {
-            margin: 5px 0;
-        }
-        .ml-3 {
-            margin-left: 15px;
-        }
-        .bg-cyan-800 {
-            background-color: #005f73;
-        }
-        .border {
-            border: 1px solid;
-        }
-        .border-black {
-            border-color: black;
-        }
-        .text-white {
-            color: white;
-        }
-        .m-1 {
-            margin: 5px;
-        }
-    </style>
+<title>Mood & Behaviour</title>
 </head>
 <body>
-    <div class="text-base font-bold my-2">Welcome to the New Age of Personalized Health!</div>
-    <div class="text-base my-2">
-        Your health journey just got personal. The DNA Company is on a mission to “change the day you die” and this app is your owner's manual to a longer, healthier life by empowering you to understand and manage your genetic expression to prevent disease, enhance vitality, and add healthy years to your life.
-    </div>
-    <div class="bg-cyan-800 border border-black my-2">
-        <div class="text-base m-1 font-bold text-white italic">
-            “This app is built for you. Because no two people are alike, and your health journey should reflect your unique DNA.”
-        </div>
-    </div>
-    <div class="text-base my-2">This app is designed for <span class="italic">you</span> because no two people are alike. With it, you can discover:</div>
-    <ul>
-        <li class="text-base my-0.5 ml-3">What foods your body processes best for optimal weight and vitality</li>
-        <li class="text-base my-0.5 ml-3">What nutrients you’re at risk of deficiency in and how to address them.</li>
-        <li class="text-base my-0.5 ml-3">How your hormones function and impact your mood, energy, and aging</li>
-        <li class="text-base my-0.5 ml-3">Your cardiovascular risk and inflammation and how to reduce them</li>
-        <li class="text-base my-0.5 ml-3">How to optimize your sleep, energy, attention, focus, and concentration</li>
-        <li class="text-base my-0.5 ml-3">Your true biological age and how to your youngest self</li>
-        <li class="text-base my-0.5 ml-3">Whether your detox pathways are optimized for modern environmental challenges.</li>
-        <li class="text-base my-0.5 ml-3">How to choose the best prescription medications for your unique needs</li>
-        <li class="text-base my-0.5 ml-3">How your microbiome affects your digestion, immunity, and overall health—and what you can do to improve it</li>
-        <li class="text-base my-0.5 ml-3">Cutting-edge cancer screening that can detect potential risks early and help guide preventive strategies.</li>
-    </ul>
-    <div class="text-base my-2">
-        And perhaps most importantly, you’ll learn how to literally add years to your life and <span class="italic">change the day you die.</span>
-    </div>
-    <div class="bg-cyan-800 border border-black my-2">
-        <div class="text-base m-1 font-bold text-white italic">
-            “No complicated setups or overly scientific jargon. Just clear, actionable steps to optimize your health, starting today.”
-        </div>
-    </div>
-    <div class="text-base my-2">
-        This app is backed by cutting-edge science, trusted by thousands, and designed to make personalized health accessible and actionable. Whether you’re a DNA Company customer or just starting to explore your genetic data, this app offers insights tailored to your needs.
-    </div>
-    <div class="text-base my-2 font-bold">Key Features:</div>
-    <ol>
-        <li>
-            <span class="text-base my-2 font-bold">Personalized Insights</span>
-            <ul>
-                <li class="text-base my-0.5"><span class="font-bold">Full DNA360 Reports:</span> Link your DNA360 kit to unlock detailed lifestyle, nutrition, supplement, and biohacking recommendations in real time.</li>
-                <li class="text-base my-0.5"><span class="font-bold">Third-Party Report Integration:</span> Upload 23andMe, Ancestry, or other raw data to populate partial reports and gain actionable advice.</li>
-            </ul>
-        </li>
-        <div class="bg-cyan-800 border border-black my-2">
-            <div class="text-base m-1 font-bold text-white italic">
-                “No DNA test? No problem. Explore educational resources, health tips, and partial insights with third-party reports like 23andMe.”
-            </div>
-        </div>
-        <li>
-            <span class="text-base my-2 font-bold">The Health Feed</span>
-            <ul>
-                <li class="text-base my-0.5">Stay informed with access to blogs, podcasts, and webinars.</li>
-                <li class="text-base my-0.5">Never miss an update with notifications for new educational content.</li>
-            </ul>
-        </li>
-        <li>
-            <span class="text-base my-2 font-bold">Shop for Your Health</span>
-            <ul>
-                <li class="text-base my-0.5">Browse a comprehensive range of DNA tests, including DNA360, Gut360, PGx Pharmacogenomics, Breast360, and cancer screening packages.</li>
-                <li class="text-base my-0.5">Explore personalized supplements and clinical coaching programs tailored to your genetic profile.</li>
-            </ul>
-        </li>
-        <li>
-            <span class="text-base my-2 font-bold">Educational Resources for Everyone</span>
-            <ul>
-                <li class="text-base my-0.5">Even without a DNA test, access curated tips, articles, and general health insights to start your wellness journey.</li>
-            </ul>
-        </li>
-
-    </ol>
-    <div class="bg-cyan-800 border border-black my-2">
-        <div class="text-base m-1 font-bold text-white italic">
-            “Your privacy is our priority. All your data is stored securely, ensuring complete confidentiality and peace of mind.”
-        </div>
-    </div>
-    <div class="text-base my-2 font-bold">Privacy and Security:</div>
-    <div class="text-base my-2">
-        At The DNA Company, your privacy is our top priority. Your genetic data is securely stored with advanced encryption and strict access controls, ensuring it remains confidential and protected. We are fully HIPAA-compliant and committed to never selling or monetizing your data. Our transparent privacy practices give you full control and peace of mind, so you can confidently explore your genetic insights and take charge of your health.
-    </div>
-    <div class="text-base my-2 font-bold">Take Charge of Your Health Today:</div>
-    <div class="text-base my-2">
-        Join thousands who have transformed their lives with The DNA Company app. Download now to unlock the tools to optimize your health, achieve your goals, and live your best life.
-    </div>
-    <div class="text-base my-2 font-bold italic">Your body’s blueprint is unique. Shouldn’t your health plan be too?</div>
-    <div class="text-base my-2 font-bold italic">Start your journey today.</div>
+<h1>Mood & Behaviour Citations</h1>
+<hr/>
+<h2>Gene: 5-HTTLPR</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/21854681/" target="_blank">Naudts KH, Azevedo RT, David AS, van Heeringen K, Gibbs AA. Epistasis between 5-HTTLPR and ADRA2B polymorphisms influences attentional bias for emotional information in healthy volunteers. Int J Neuropsychopharmacol. 2012;15(8):1027-1036. doi:10.1017/S1461145711001295</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/12869766/" target="_blank">Caspi A, Sugden K, Moffitt TE, et al. Influence of life stress on depression: moderation by a polymorphism in the 5-HTT gene. Science. 2003;301(5631):386-389. doi:10.1126/science.1083968</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/21199959/" target="_blank">Karg K, Burmeister M, Shedden K, Sen S. The serotonin transporter promoter variant (5-HTTLPR), stress, and depression meta-analysis revisited: evidence of genetic moderation. Arch Gen Psychiatry. 2011;68(5):444-454. doi:10.1001/archgenpsychiatry.2010.189</a></p>
+<hr/>
+<h2>Gene: 5HTT</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/29892054/" target="_blank">Faraone SV, Larsson H. Genetics of attention deficit hyperactivity disorder. Mol Psychiatry. 2019;24(4):562-575. doi:10.1038/s41380-018-0070-0</a></p>
+<hr/>
+<h2>Gene: BDNF</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/29892054/" target="_blank">Faraone SV, Larsson H. Genetics of attention deficit hyperactivity disorder. Mol Psychiatry. 2019;24(4):562-575. doi:10.1038/s41380-018-0070-1</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/12553913/" target="_blank">Egan MF, Kojima M, Callicott JH, et al. The BDNF val66met polymorphism affects activity-dependent secretion of BDNF and human memory and hippocampal function. Cell. 2003;112(2):257-269. doi:10.1016/s0092-8674(03)00035-7</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/21131999/" target="_blank">Yu H, Chen ZY. The role of BDNF in depression on the basis of its location in the neural circuitry. Acta Pharmacol Sin. 2011;32(1):3-11. doi:10.1038/aps.2010.184</a></p>
+<hr/>
+<h2>Gene: COMT</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/20088618/" target="_blank">Froehlich TE, McGough JJ, Stein MA. Progress and promise of attention-deficit hyperactivity disorder pharmacogenetics. CNS Drugs. 2010;24(2):99-117. doi:10.2165/11530290-000000000-00000</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/15956988/" target="_blank">Stein MB, Fallin MD, Schork NJ, Gelernter J. COMT polymorphisms and anxiety-related personality traits. Neuropsychopharmacology. 2005;30(11):2092-2102. doi:10.1038/sj.npp.1300787</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/23792050/" target="_blank">Antypa N, Drago A, Serretti A. The role of COMT gene variants in depression: Bridging neuropsychological, behavioral and clinical phenotypes. Neurosci Biobehav Rev. 2013;37(8):1597-1610. doi:10.1016/j.neubiorev.2013.06.006</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/27241058/" target="_blank">Schacht JP. COMT val158met moderation of dopaminergic drug effects on cognitive function: a critical review. Pharmacogenomics J. 2016;16(5):430-438. doi:10.1038/tpj.2016.43</a></p>
+<hr/>
+<h2>Gene: DRD2</h2>
+<p><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2829542/" target="_blank">Prasad P, Ambekar A, Vaswani M. Dopamine D2 receptor polymorphisms and susceptibility to alcohol dependence in Indian males: a preliminary study. BMC Med Genet. 2010 Feb 11;11:24. doi: 10.1186/1471-2350-11-24. PMID: 20146828; PMCID: PMC2829542.</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/10881203/" target="_blank">Noble EP. Addiction and its reward process through polymorphisms of the D2 dopamine receptor gene: a review. Eur Psychiatry. 2000;15(2):79-89. doi:10.1016/s0924-9338(00)00208-x</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/9672901/" target="_blank">Pohjalainen T, Rinne JO, Någren K, et al. The A1 allele of the human D2 dopamine receptor gene predicts low D2 receptor availability in healthy volunteers. Mol Psychiatry. 1998;3(3):256-260. doi:10.1038/sj.mp.4000350</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/18063800/" target="_blank">Klein TA, Neumann J, Reuter M, Hennig J, von Cramon DY, Ullsperger M. Genetically determined differences in learning from errors. Science. 2007;318(5856):1642-1645. doi:10.1126/science.1145044</a></p>
+<hr/>
+<h2>Gene: DRD2, COMT</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/17217544/" target="_blank">Light KJ, Joyce PR, Luty SE, et al. An association study of DRD2 and COMT polymorphisms with novelty seeking and harm avoidance scores, in two independent samples of depressed patients. Behav Brain Funct. 2007;3:3. Published 2007 Jan 11. doi:10.1186/1744-9081-3-3</a></p>
+<hr/>
+<h2>Gene: MAO</h2>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/19224413/" target="_blank">Huang SY, Lin MT, Lin WW, Huang CC, Shy MJ, Lu RB. Association of monoamine oxidase A (MAOA) polymorphisms and clinical subgroups of major depressive disorders in the Han Chinese population. World J Biol Psychiatry. 2009;10(4 Pt 2):544-551. doi:10.1080/15622970701816506</a></p>
+<hr/>
+<h2>Gene: TPH2, BDNF</h2>
+<p><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5047464/" target="_blank">Latsko MS, Gilman TL, Matt LM, Nylocks KM, Coifman KG, Jasnow AM. A Novel Interaction between Tryptophan Hydroxylase 2 (TPH2) Gene Polymorphism (rs4570625) and BDNF Val66Met Predicts a High-Risk Emotional Phenotype in Healthy Subjects. PLoS One. 2016 Oct 3;11(10):e0162585. doi: 10.1371/journal.pone.0162585. PMID: 27695066; PMCID: PMC5047464.</a></p>
+<p><a href="https://pubmed.ncbi.nlm.nih.gov/24972302/" target="_blank">Ignácio ZM, Réus GZ, Abelaira HM, Quevedo J. Epigenetic and epistatic interactions between serotonin transporter and brain-derived neurotrophic factor genetic polymorphism: insights in depression. Neuroscience. 2014;275:455-468. doi:10.1016/j.neuroscience.2014.06.036</a></p>
 </body>
 </html>
